--- a/class 2/Form.html
+++ b/class 2/Form.html
@@ -1,71 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h2>HTML FORM</h2>
     <form action="">
-        <!-- box -->
-       <fieldset>
-        <legend>User Registation</legend>
+      <!-- box -->
+      <fieldset>
+        <!-- <legend>User Registation</legend> -->
         <!-- Name -->
-        <label for="firstName">First Name : <span style="color: red;">*</span></label>
-        <input id="firstName" type="text" placeholder="Enter Your Name"> <br><br>
+        <label for="firstName"
+          >First Name : <span style="color: red">*</span></label
+        >
+        <input id="firstName" type="text" placeholder="Enter Your Name" />
+        <br /><br />
 
         <!-- Eamil -->
-        <label for="Email">Email: <span style="color: red;">*</span></label>
-        <input id="Email" type="email" placeholder="test@gmail.com" required><br><br>
+        <label for="Email">Email: <span style="color: red">*</span></label>
+        <input
+          id="Email"
+          type="email"
+          placeholder="test@gmail.com"
+          required
+        /><br /><br />
 
         <!-- Phone -->
-        <label for="Phone">Phone: <span style="color: red;">*</span></label>
-        <input id="Phone" type="number" placeholder="+91 95472 74602" required><br><br>
+        <label for="Phone">Phone: <span style="color: red">*</span></label>
+        <input
+          id="Phone"
+          type="number"
+          placeholder="+91 95472 74602"
+          required
+        /><br /><br />
 
         <!-- password -->
         <label for="pass">Your Password</label>
-        <input id="pass" type="password" placeholder="Enter Your Password" ><br><br>
-        
+        <input
+          id="pass"
+          type="password"
+          placeholder="Enter Your Password"
+        /><br /><br />
+
         <!-- Dropdown -->
         <label for="Country">Choose Country</label>
         <select name="" id="Country">
-            <option value="">--Select Country--</option>
-            <option value="India">India</option>
-            <option value="United States">United States</option>
-            <option value="Japan">Japan</option>
-            <option value="Brazil">Brazil</option>
-            <option value="China">China</option>
-        </select> <br><br>
+          <option value="">--Select Country--</option>
+          <option value="India">India</option>
+          <option value="United States">United States</option>
+          <option value="Japan">Japan</option>
+          <option value="Brazil">Brazil</option>
+          <option value="China">China</option>
+        </select>
+        <br /><br />
 
         <!-- Radio -->
         <label for="">Gender :</label>
-        <input type="radio" name="Gender" id="male">
+        <input type="radio" name="Gender" id="male" />
         <label for="male">Male</label>
-        <input type="radio" name="Gender" id="Female">
-        <label for="Female">Female</label> 
-        <input type="radio" name="Gender" id="other">
-        <label for="other">Other</label> <br><br>
+        <input type="radio" name="Gender" id="Female" />
+        <label for="Female">Female</label>
+        <input type="radio" name="Gender" id="other" />
+        <label for="other">Other</label> <br /><br />
 
         <!-- Date of Birth -->
         <label for="birth">Date of Birth :</label>
-        <input type="date" id="birth"> <br><br>
+        <input type="date" id="birth" /> <br /><br />
 
         <!-- Upload File -->
         <label for="file">Upload File</label>
-        <input type="file" id="file"> <br><br>
+        <input type="file" id="file" /> <br /><br />
 
         <!-- Massage -->
-        <label for="Massage">Massage</label> <br>
-        <textarea name="" id="Massage" cols="50" rows="5" placeholder="Hi......"></textarea> <br><br>
+        <label for="Massage">Massage</label> <br />
+        <textarea
+          name=""
+          id="Massage"
+          cols="50"
+          rows="5"
+          placeholder="Hi......"
+        ></textarea>
+        <br /><br />
 
         <!-- accept -->
-        <input type="checkbox">
-        <label for="">Agree Terms & Condation</label> <br><br>
+        <input type="checkbox" />
+        <label for="">Agree Terms & Condation</label> <br /><br />
         <!-- Submit -->
-        <input type="Submit">
-        <input type="reset">
-       </fieldset>
+        <input type="Submit" />
+        <input type="reset" />
+      </fieldset>
     </form>
-</body>
+  </body>
 </html>
